--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [
-    "pyglet>=2.1.3",
-]
+dependencies = ["pyglet>=2.1.3"]
+
+[dependency-groups]
+dev = ["ruff>=0.11.9"]
+
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
