--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = ["pyglet>=2.1.3"]
+dependencies = [
+    "pyglet>=2.1.3",
+    "toml>=0.10.2",
+]
 
 [dependency-groups]
 dev = ["ruff>=0.11.9"]
